--- a/MVC_GerenciadorDeConteudo/MVC_GerenciadorDeConteudo.csproj
+++ b/MVC_GerenciadorDeConteudo/MVC_GerenciadorDeConteudo.csproj
@@ -149,6 +149,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\validacoes.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -164,6 +165,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Paginas\Index.cshtml" />
+    <Content Include="Views\Paginas\Novo.cshtml" />
+    <Content Include="Views\Paginas\Editar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
