--- a/MVC_GerenciadorDeConteudo/MVC_GerenciadorDeConteudo.csproj
+++ b/MVC_GerenciadorDeConteudo/MVC_GerenciadorDeConteudo.csproj
@@ -120,6 +120,8 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Business\Cep.cs" />
+    <Compile Include="Controllers\CepController.cs" />
     <Compile Include="Controllers\PaginasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -139,6 +141,7 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\cep.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
@@ -169,6 +172,7 @@
     <Content Include="Views\Paginas\Editar.cshtml" />
     <Content Include="Views\Paginas\Preview.cshtml" />
     <Content Include="Views\Shared\_Render.cshtml" />
+    <Content Include="Views\Cep\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
